Add: Added prettier

--- a/timer/src/Pages/Timer.Page.css
+++ b/timer/src/Pages/Timer.Page.css
@@ -1,5 +1,8 @@
 .TimerPage_container {
-    width: 100vw; height: 100vh;
-    display: flex; flex-direction: column;
-    justify-content: center; align-items: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
