--- a/timer/src/Components/Clock.Component.css
+++ b/timer/src/Components/Clock.Component.css
@@ -1,204 +1,261 @@
 .Clock_container {
-    width: 600px; height: 250px;
-    background-color: rgb(48, 48, 48);
-    border: solid; border-color: black; border-radius: 5px;
-    box-sizing: border-box; padding: 40px;
-    display: flex; flex-direction: column;
-    justify-content: space-between;
+  width: 600px;
+  height: 250px;
+  background-color: rgb(48, 48, 48);
+  border: solid;
+  border-color: black;
+  border-radius: 5px;
+  box-sizing: border-box;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .clock_topPart {
-    width: 100%; height: 60%;
-    display: flex; justify-content: space-between;
+  width: 100%;
+  height: 60%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .clock_display {
-    height: 100%; width: 75%;
-    display: flex; flex-direction: row;
-    align-items: center;
-    background-color: black;
-    box-sizing: border-box; padding: 10px;
+  height: 100%;
+  width: 75%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: black;
+  box-sizing: border-box;
+  padding: 10px;
 }
 
 .clock_display_left {
-    height: 100%; width: 20%;
-    display: flex; 
-    align-items: center; justify-content: center;
+  height: 100%;
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .clock_display_right_on {
-    transition: 0.3s;
-    height: 70%; width: 80%;
-    display: flex; align-items: center; justify-content: flex-end;
-    color: rgb(163, 255, 255);
-    -webkit-filter: drop-shadow(0 0 5px rgb(163, 255, 255));
-    filter: drop-shadow(0 0 5px rgb(163, 255, 255));
-    font-size: 450%; font-family: "Digi";
+  transition: 0.3s;
+  height: 70%;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  color: rgb(163, 255, 255);
+  -webkit-filter: drop-shadow(0 0 5px rgb(163, 255, 255));
+  filter: drop-shadow(0 0 5px rgb(163, 255, 255));
+  font-size: 450%;
+  font-family: "Digi";
 }
 
 .clock_display_right_off {
-    height: 100%; width: 80%;
-    display: flex; flex-direction: row-reverse;
-    align-items: center;
-    color: rgb(20, 20, 20);
-    font-size: 450%; font-family: "Digi";
+  height: 100%;
+  width: 80%;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  color: rgb(20, 20, 20);
+  font-size: 450%;
+  font-family: "Digi";
 }
 
 .clock_display_units {
-    display: flex; justify-self: flex-end;
-    align-self: flex-end;
-    font-size:
-     50%; font-family: "Digi";
+  display: flex;
+  justify-self: flex-end;
+  align-self: flex-end;
+  font-size: 50%;
+  font-family: "Digi";
 }
 
 .clock_bottomPart {
-    width: 100%; height: 30%;
-    display: flex; flex-direction: row;
+  width: 100%;
+  height: 30%;
+  display: flex;
+  flex-direction: row;
 }
 
 .clock_switchContainer {
-    height: 100%; width: 23%;
-    display: flex; 
-    color: white;
-    justify-content: space-around; align-items: center;
+  height: 100%;
+  width: 23%;
+  display: flex;
+  color: white;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .clock_sliderContainer {
-    height: 100%; width: 77%;
-    padding-left: 15px;
+  height: 100%;
+  width: 77%;
+  padding-left: 15px;
 }
 
 .clock_sliderContainer_slider {
-    height: 70%; width: 100%;
+  height: 70%;
+  width: 100%;
 }
 
 .clock_sliderContainer_slider_scale {
-    height: 30%; width: 100%;
+  height: 30%;
+  width: 100%;
 }
 
 .slider {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 100%;
-    height: 5px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
 .slider::-webkit-slider-thumb {
-    -webkit-appearance: none; 
-    appearance: none;
-    width: 25px; 
-    height: 25px;
-    border-radius: 12.5px;
-    background-color: rgb(187, 194, 204);
-    cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 12.5px;
+  background-color: rgb(187, 194, 204);
+  cursor: pointer;
 }
 
 .clock_buttons {
-    height: 100%; width: 20%;
-    background-color: rgb(48, 48, 48);
-    display: flex; flex-direction: column;
-    justify-content: space-between;
+  height: 100%;
+  width: 20%;
+  background-color: rgb(48, 48, 48);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .clock_buttons_top {
-    width: 100%; height: 45%;
-    box-sizing: border-box; padding: 5%;
-    background-color: rgb(30, 30, 30);
-    display: flex; justify-content: space-between;
+  width: 100%;
+  height: 45%;
+  box-sizing: border-box;
+  padding: 5%;
+  background-color: rgb(30, 30, 30);
+  display: flex;
+  justify-content: space-between;
 }
 
 .clock_buttons_bottom {
-    width: 100%; height: 45%;
-    box-sizing: border-box; padding: 5%;
-    background-color: rgb(30, 30, 30);
-    display: flex; justify-content: space-between;
+  width: 100%;
+  height: 45%;
+  box-sizing: border-box;
+  padding: 5%;
+  background-color: rgb(30, 30, 30);
+  display: flex;
+  justify-content: space-between;
 }
 
 .clock_buttonSmall {
-    height: 100%; width: 48%; 
-    background-color: rgb(50, 50, 50);
-    display: flex; justify-content: center; align-items: center;
-    cursor: pointer;
+  height: 100%;
+  width: 48%;
+  background-color: rgb(50, 50, 50);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .clock_buttonSmall:hover {
-    opacity: 0.8;
-    height: 100%; width: 48%; 
-    background-color: rgb(50, 50, 50);
-    display: flex; justify-content: center; align-items: center;
-    cursor: pointer;
+  opacity: 0.8;
+  height: 100%;
+  width: 48%;
+  background-color: rgb(50, 50, 50);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .clock_buttonLarge {
-    height: 100%; width: 100%; 
-    background-color: rgb(50, 50, 50);
-    box-sizing: border-box; padding: 5px;
-    display: flex; justify-content: space-evenly; align-items: center;
-    cursor: pointer;
-    color: white;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(50, 50, 50);
+  box-sizing: border-box;
+  padding: 5px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  cursor: pointer;
+  color: white;
 }
 
 .clock_buttonLarge:hover {
-    opacity: 0.8;
-    height: 100%; width: 100%; 
-    background-color: rgb(50, 50, 50);
-    box-sizing: border-box; padding: 5px;
-    display: flex; justify-content: space-evenly; align-items: center;
-    cursor: pointer;
-    color: white;
+  opacity: 0.8;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(50, 50, 50);
+  box-sizing: border-box;
+  padding: 5px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  cursor: pointer;
+  color: white;
 }
 
 .light_on {
-    transition: 0.3s;
-    height: 15px; width: 15px;
-    border-radius: 7.5px; border: none;
-    background-color: rgb(163, 255, 255);
-    -webkit-filter: drop-shadow(0 0 5px rgb(163, 255, 255));
-    filter: drop-shadow(0 0 5px rgb(163, 255, 255));
+  transition: 0.3s;
+  height: 15px;
+  width: 15px;
+  border-radius: 7.5px;
+  border: none;
+  background-color: rgb(163, 255, 255);
+  -webkit-filter: drop-shadow(0 0 5px rgb(163, 255, 255));
+  filter: drop-shadow(0 0 5px rgb(163, 255, 255));
 }
 
 .light_off {
-    transition: 0.3s;
-    height: 15px; width: 15px;
-    border-radius: 7.5px;
-    border: none;
-    background-color: rgb(0, 0, 0);
+  transition: 0.3s;
+  height: 15px;
+  width: 15px;
+  border-radius: 7.5px;
+  border: none;
+  background-color: rgb(0, 0, 0);
 }
 
 @media only screen and (max-width: 600px) {
-    .Clock_container {
-      width: 400px;
-    }
-    .clock_display_right_on {
-        font-size: 225%; font-family: "Digi";
-    }
-    .clock_display_right_off {
-        font-size: 225%; font-family: "Digi";
-    }
-    .clock_display_units {
-        font-size: 50%; font-family: "Digi";
-        justify-self: flex-start;
-        align-self: center;
-    }
-    .clock_switchContainer {
-        font-size: small;
-        justify-content: space-between;
-        width: 30%;
-    }
-    .light_on {
-        height: 10px; width: 10px;
-        border-radius: 5px;
-    }
-    .light_off {
-        height: 10px; width: 10px;
-        border-radius: 5px;
-    }
-    .clock_buttonLarge {
-        font-size: small;
-    }
+  .Clock_container {
+    width: 400px;
+  }
+  .clock_display_right_on {
+    font-size: 225%;
+    font-family: "Digi";
+  }
+  .clock_display_right_off {
+    font-size: 225%;
+    font-family: "Digi";
+  }
+  .clock_display_units {
+    font-size: 50%;
+    font-family: "Digi";
+    justify-self: flex-start;
+    align-self: center;
+  }
+  .clock_switchContainer {
+    font-size: small;
+    justify-content: space-between;
+    width: 30%;
+  }
+  .light_on {
+    height: 10px;
+    width: 10px;
+    border-radius: 5px;
+  }
+  .light_off {
+    height: 10px;
+    width: 10px;
+    border-radius: 5px;
+  }
+  .clock_buttonLarge {
+    font-size: small;
+  }
 }
